First and partial implementation of the GeneralConfiguration. The configuration is not yet stored on filesystem. The instant/speech mode is not fully implemented either. Only current speech is instantly completed but follow-up speeches are still in speech mode.

--- a/DigimonWorldNet6/Frontend.WPF/App.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/App.xaml
@@ -8,6 +8,7 @@
         <FontFamily x:Key="Dw1Font">pack://application:,,,/Frontend.WPF;component/Fonts/DW1_US_Regular.ttf#DW1 US</FontFamily>
 
         <system:Int32 x:Key="DefaultTooltipDelay">750</system:Int32>
+        <system:Double x:Key="DefaultButtonHeight">40</system:Double>
 
         <conversion:EnumToImageConverter x:Key="EnumToImageConverter" />
 
