--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Labels/DefaultLabelStyle.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/Labels/DefaultLabelStyle.xaml
@@ -7,6 +7,7 @@
             <Setter Property="HorizontalContentAlignment" Value="Center" />
             <Setter Property="HorizontalAlignment" Value="Right" />
             <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Height" Value="{StaticResource DefaultTextHeightSpacing}" />
         </Style.Setters>
     </Style>
     
