--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
@@ -1,10 +1,11 @@
-<Window x:Class="DigimonWorld.Frontend.WPF.Windows.GeneralConfig.GeneralConfigWindow"
+<windows:BaseDialogWindow x:Class="DigimonWorld.Frontend.WPF.Windows.GeneralConfig.GeneralConfigWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:generalConfig="clr-namespace:DigimonWorld.Frontend.WPF.Windows.GeneralConfig"
         xmlns:system="clr-namespace:System;assembly=System.Runtime"
+        xmlns:windows="clr-namespace:DigimonWorld.Frontend.WPF.Windows"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=generalConfig:GeneralConfigWindowViewModel, IsDesignTimeCreatable=True}"
         Title="Configuration"
@@ -13,11 +14,9 @@
         WindowStyle="None"
         AllowsTransparency="True"
         Background="Transparent"
-        WindowStartupLocation="Manual"
-        Width="500"
-        Height="500">
+        WindowStartupLocation="Manual">
 
-    <Window.Resources>
+    <windows:BaseDialogWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/Buttons/DefaultButtonStyle.xaml" />
@@ -25,11 +24,11 @@
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/Labels/DefaultSheenLabelStyle.xaml" />
                 <ResourceDictionary Source="../../ResourceDictionaries/Styles/Labels/DefaultLabelStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            
+
             <system:Double x:Key="WindowButtonWidth">70</system:Double>
             <system:Double x:Key="OptionButtonHeight">22</system:Double>
         </ResourceDictionary>
-    </Window.Resources>
+    </windows:BaseDialogWindow.Resources>
 
     <Border Background="Transparent" Panel.ZIndex="1">
         <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="Black">
@@ -39,9 +38,14 @@
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*" />
+                                <RowDefinition Height="*" />
                                 <RowDefinition Height="60" />
                             </Grid.RowDefinitions>
-                            <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <Grid Grid.Column="0" Grid.Row="0" Margin="10,0,10,10">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="60"></RowDefinition>
                                     <RowDefinition Height="Auto"></RowDefinition>
@@ -50,29 +54,27 @@
                                     <ColumnDefinition Width="Auto" />
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
-                                <Label Grid.Row="0" Grid.Column="0" Height="40" Width="150" HorizontalAlignment="Center" Style="{StaticResource DefaultSheenLabelStyle}">
-                                    NARRATION
-                                </Label>
+                                <Label Grid.Row="0" Grid.Column="0" Height="40" Width="150" HorizontalAlignment="Center" Style="{StaticResource DefaultSheenLabelStyle}" Content="NARRATION" />
                                 <StackPanel Grid.Row="1" Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center">
-                                    <Label Style="{StaticResource DefaultLabelStyle}" Content="Narrator mode:" Margin="10, 0, 5, 0"/>
+                                    <Label Style="{StaticResource DefaultLabelStyle}" Content="Narrator mode:" Margin="10, 0, 5, 0" />
                                     <StackPanel Orientation="Horizontal">
                                         <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
                                                 Height="{StaticResource OptionButtonHeight}"
                                                 Width="60"
                                                 Content="Speech"
                                                 Command="{Binding SetNarratorModeSpeechCommand}"
-                                                Tag="{Binding IsNarratorModeSpeech}"/>
+                                                Tag="{Binding IsNarratorModeSpeech}" />
                                         <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
                                                 Height="{StaticResource OptionButtonHeight}"
                                                 Width="60"
                                                 Content="Instant"
-                                                Command="{Binding SetNarratorModeInstantCommand}" 
-                                                Tag="{Binding IsNarratorModeInstant}"/>
+                                                Command="{Binding SetNarratorModeInstantCommand}"
+                                                Tag="{Binding IsNarratorModeInstant}" />
                                     </StackPanel>
                                 </StackPanel>
-
                             </Grid>
-                            <StackPanel Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10">
+
+                            <StackPanel Grid.Row="2" Grid.ColumnSpan="2" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10">
                                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                                     <Button Style="{StaticResource DefaultButtonStyle}"
                                             Height="{StaticResource DefaultButtonHeight}"
@@ -93,4 +95,4 @@
             </Border>
         </Border>
     </Border>
-</Window>
+</windows:BaseDialogWindow>
